libs/extractor/src/snapshots/extractor__tests__import_wrong_component.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {W} from '@devup-ui/core'\n        \"#, ExtractOption\n{ package: \"@devup-ui/core\".to_string(), css_file: None }).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "import { W } from \"@devup-ui/core\";\n",
}
