libs/extractor/src/snapshots/extractor__tests__inline_local_constants.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import { Box, css, keyframes, globalCss } from '@devup-ui/react';\nconst SIZE = 4;\nconst UNIT = `${SIZE}px`;\nconst DOUBLE = SIZE * 2;\nconst HALF = SIZE / 2 - 1;\nconst LABEL = 'a' + SIZE;\nconst TINY = 0.0000001;\nconst HUGE = 1e21;\nconst ZERO = -0;\nconst PX = 'px';\nconst SELF = SELF;\nlet mutable = 1;\nexport const a = <Box p={DOUBLE} m={UNIT} w={SIZE + 1} h={HALF} content={LABEL} top={`${TINY}px`} left={`${HUGE}px`} right={ZERO + PX} bottom={mutable} zIndex={SELF} />;\nexport const b = css({ padding: `${SIZE * 2}px`, margin: SIZE - 1, width: SIZE * SIZE, height: (SIZE) });\nexport const k = keyframes({ from: { opacity: SIZE / 8 } });\nglobalCss({ body: { padding: UNIT } });\nexport const c = <Box p={SIZE / 0} m={PX - 1} w={`${PX}${other}`} h={SIZE % 3} />;\",\nExtractOption::default(),).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "content",
                value: "a4",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "height",
                value: "16px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "height",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "left",
                value: "1e+21px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "12px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "32px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "4px",
                level: 0,
                selector: Some(
                    Global(
                        "body",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "8px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "right",
                value: "0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "top",
                value: "1e-7px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "width",
                value: "20px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "width",
                value: "64px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "bottom",
                level: 0,
                identifier: "__devupSpread1",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "margin",
                level: 0,
                identifier: "__devupSpread3",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "padding",
                level: 0,
                identifier: "__devupSpread4",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "width",
                level: 0,
                identifier: "__devupSpread2",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "z-index",
                level: 0,
                identifier: "__devupSpread0",
                selector: None,
                style_order: None,
            },
        ),
        Keyframes(
            ExtractKeyframes {
                keyframes: {
                    "from": [
                        ExtractStaticStyle {
                            property: "opacity",
                            value: ".5",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                },
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui-0.css\";\nconst SIZE = 4;\nconst UNIT = `${SIZE}px`;\nconst DOUBLE = SIZE * 2;\nconst HALF = SIZE / 2 - 1;\nconst LABEL = \"a\" + SIZE;\nconst TINY = 1e-7;\nconst HUGE = 1e21;\nconst ZERO = -0;\nconst PX = \"px\";\nconst SELF = SELF;\nlet mutable = 1;\nexport const a = ((__devupSpread1, __devupSpread0) => <div className=\"FLtest_ptsx-OLpadding-v32px FLtest_ptsx-OLmargin-v4px FLtest_ptsx-OLwidth-v20px FLtest_ptsx-OLheight-v4px FLtest_ptsx-OLcontent-va4 FLtest_ptsx-OLtop-v1e_d7px FLtest_ptsx-OHcbk5rwk3nree1rtv FLtest_ptsx-OLright-v0 FLtest_ptsx-OHcgmz4axyop3geabu FLtest_ptsx-OHdbei_bz0nvd8ag42\" style={{\n\t\"---SUHaskxhmhd0pnl776k-li\": __devupSpread1,\n\t\"---SUHaskxhmhd0pnl776k-lz\": __devupSpread0\n}} />)(mutable, SELF);\nexport const b = \"FLtest_ptsx-OLpadding-v8px FLtest_ptsx-OLmargin-v12px FLtest_ptsx-OLwidth-v64px FLtest_ptsx-OLheight-v16px\";\nexport const k = \"KHai31p1nymgxx16_9\";\n;\nexport const c = ((__devupSpread4, __devupSpread3, __devupSpread2) => <div className=\"FLtest_ptsx-OHcp_n7kkx0rh4ufs4 FLtest_ptsx-OHbj4gq377lfgi_0i4 FLtest_ptsx-OHbzeiu4pt3o0qlxv_ FLtest_ptsx-OLheight-v4px\" style={{\n\t\"---SUHaskxhmhd0pnl776k-si\": __devupSpread4,\n\t\"---SUHaskxhmhd0pnl776k-sv\": __devupSpread3,\n\t\"---SUHaskxhmhd0pnl776k-s6\": __devupSpread2\n}} />)(4 / 0, \"px\" - 1, `${`px`}${other}`);\n",
}
